<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.basicdeb.mercaditouser.viewmodel.login.LoginViewModel" />
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_bk_color"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:layout_gravity="center">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:paddingTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textColor="@color/darkTextColor"
                        android:text="@string/loginCuenta"/>

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/mercadito"
                        android:layout_marginStart="5dp"
                        android:contentDescription="@string/descripcionlogo" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail_login"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail_login"
                        style="@style/modifiedEditText"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:hint="@string/login_email_hint"
                        android:text="@={viewModel.correo}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword_login"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword_login"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_password_hint"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:text="@={viewModel.contra}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/btn_login_contraolvidada"
                    style="@style/viewParent"
                    android:text="@string/contraseña_olvidada"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/newsMoreTextSize"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/btn_login_iniciar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/loginButton"
                    android:layout_marginTop="30dp"
                    android:text="@string/login"
                    android:onClick="@{()->viewModel.checkField()}"/>

                <ProgressBar
                    android:id="@+id/cirLoginButton_login"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/btn_login_registrarse1"
                    style="@style/parent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/themeColor"
                    android:textSize="17sp"
                    android:text="@string/nuevo_usuario_registrate_ahora"
                    android:layout_marginTop="30dp"/>




                <LinearLayout
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="12"
                    android:gravity="center"
                    android:layout_marginTop="30dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_weight="3"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/otro_metodos"
                        android:layout_weight="6"
                        android:textSize="14sp"
                        android:textAlignment="center"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_weight="3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp">
                    <ImageView
                        android:visibility="visible"
                        android:id="@+id/btn_login_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_google_plus"
                        android:contentDescription="@string/todo" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
        <View
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_width="11dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_side_bg"/>
        <ImageView
            android:id="@+id/btn_login_registrarse2"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_img"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/todo" />
    </RelativeLayout>
</layout>