<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable
            name="viewModel"
            type="com.basicdeb.mercaditouser.viewmodel.login.RegisterViewModel" />
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/register_bk_color"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:layout_gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:textColor="@color/whiteTextColor"
                        android:text="@string/tu_primer_paso"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_login_hero"
                        android:contentDescription="@string/todo" />
                </LinearLayout>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputEmail"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextEmail_register"
                                style="@style/modifiedEditText"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:hint="@string/login_email_hint"
                                android:text="@={viewModel.correo}"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputContra1"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextContra1_register"
                                style="@style/modifiedEditText"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:hint="@string/contrase_a"
                                android:text="@={viewModel.contra1}"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPassword"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextContra2_register"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:maxLines="1"
                                android:inputType="textPassword"
                                android:text="@={viewModel.contra2}"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btn_register_registro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/loginButton"
                            android:layout_marginTop="10dp"
                            android:text="@string/registrarse"
                            android:onClick="@{()->viewModel.checkFields()}"/>

                        <ProgressBar
                            android:id="@+id/cirRegisterButton_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/btn_register_yatengocuenta"
                            style="@style/parent"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/themeColor"
                            android:textSize="17sp"
                            android:text="Already have an account?"
                            android:layout_marginTop="@dimen/loginViewsMargin"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="12"
                    android:gravity="center"
                    android:layout_marginTop="30dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/whiteTextColor"
                        android:layout_weight="3"/>

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whiteTextColor"
                        android:text="Use other Methods"
                        android:layout_weight="6"
                        android:textSize="12sp"
                        android:textAlignment="center"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/whiteTextColor"
                        android:layout_weight="3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp">
                    <ImageView
                        android:id="@+id/btn_register_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_facebook"
                        android:onClick="@{()->viewModel.facebook()}"/>
                    <ImageView
                        android:id="@+id/btn_register_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_google_plus"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
        <View
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_width="11dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_side_bg"/>
        <ImageView
            android:id="@+id/btn_register_back"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_img"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="30dp"
            android:adjustViewBounds="false"/>
    </RelativeLayout>
</layout>